# stock-analysis

./: .gitignore  .lintstagedrc.js  .prettierignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  eslint.config.ts  index.html  lint-staged.config.mjs  lint-staged.config.ts  main.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.claude/: ai-sop.md  architecture.md  conventions.md  memory.md  project.md  rules.md
.github/workflows/: deploy-web.yml  docker-publish.yml
docs/plans/: 2026-02-25-desktop-layout-refactor.md  2026-03-01-stock-analyzer-skill-design.md
docs/superpowers/specs/: 2026-03-14-monorepo-split-design.md
public/favicons/: site.webmanifest
server/: .env.example  Dockerfile  main.py  pyproject.toml
server/src/: env.py
server/src/agent/: llm.py  prompts.py  stock_analysis_agent.py
server/src/agents/: __init__.py  base.py  llm.py
server/src/analyzer/: __init__.py  multi_factor.py  technical_factors.py  trend_analyzer.py  trend_models.py
server/src/api/: schemas.py
server/src/controller/: agent.py  index.py  schemas.py  stock.py
server/src/core/: __init__.py  constants.py  models.py  pipeline.py
server/src/data/: __init__.py  (+2 more)
src/: config.py  data_loader.py  main.py  strategy.py
src/controller/: index.py  schemas.py
src/hooks/: useTheme.ts
src/service/: data_loader.py  index.py  model.py  report.py  strategy.py
src/types/: index.ts
web/: .stylelintrc  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.ts  vite.config.ts
web/src/: App.css  App.tsx  index.css  index.tsx  main.tsx
(+108 files in other folders)
