[project]
name = "stock-analysis"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan", email = "627311610@qq.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "akshare (>=1.17.87,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "stockstats (>=0.6.5,<0.7.0)",
    "rich (>=14.2.0,<15.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "src" }]

[tool.poetry.scripts]
# start script: poetry run analyze
analyze = "src.main:main"
